--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,3 +14,5 @@
 
 <!-- For all browsers -->
 <link rel="stylesheet" href="{{ base_path }}/assets/css/main.css">
+<link rel="icon" type="image/png" sizes="32x32" href="{{ base_path }}/images/favicon-32x32.png?v=rocket">
+<link rel="shortcut icon" href="{{ base_path }}/images/favicon.ico?v=rocket">
