Update favicon links to use force-refresh

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,9 +14,9 @@
 
 <link rel="stylesheet" href="{{ base_path }}/assets/css/main.css">
 
-<link rel="icon" type="image/svg+xml" href="{{ base_path }}/images/favicon.svg?v=rocket-final"/>
-<link rel="icon" type="image/png" href="{{ base_path }}/images/favicon-32x32.png?v=rocket-final" sizes="32x32"/>
-<link rel="shortcut icon" href="{{ base_path }}/images/favicon.ico?v=rocket-final"/>
+<link rel="icon" type="image/svg+xml" href="{{ base_path }}/images/favicon.svg?v=force-refresh"/>
+<link rel="icon" type="image/png" href="{{ base_path }}/images/favicon-32x32.png?v=force-refresh" sizes="32x32"/>
+<link rel="shortcut icon" href="{{ base_path }}/images/favicon.ico?v=force-refresh"/>
 
 {% if site.head_scripts %}
   {% for script in site.head_scripts %}
